# NCapybaraLib

./: .editorconfig  .gitignore  LICENSE.md  README.md  pyproject.toml
src/NCapybaraLib/: All.py  Containers.py  Dictionary.py  DoomWAD.py  Math.py  ROT.py  String.py  __init__.py  __init__.pyi
src/NCapybaraLib/_internal/: Containers.py  Dictionary.py  DoomWAD.py  Math.py  ROT.py  String.py  init.py
tests/: containers_test.py  general_test.py  math_test.py  rot_test.py  string_test.py
