[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NCapybaraLib"
description = "A small library with a bunch of functions and thingies I made for fun."
authors = [{name="NorbCodes"}]
maintainers = [{name="NorbCodes"}]
license = "MIT"
license-files = ["LICENSE.md"]
version = "1.3.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["capybara", "math", "functions", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
"Github Repo" = "https://github.com/norbcodes/NCapybaraLib"
"Bug Tracker" = "https://github.com/norbcodes/NCapybaraLib/issues"
"Pull Requests" = "https://github.com/norbcodes/NCapybaraLib/pulls"